Fixed match form buttons style on small screens

--- a/frontend/src/Components/Matches/MatchForm/MatchForm.css
+++ b/frontend/src/Components/Matches/MatchForm/MatchForm.css
@@ -237,8 +237,8 @@
     }
     
     .match-form-buttons-area {
-        margin-top: 0px;
-        margin-left: 20px;
+        margin-top: 10px;
+        margin-left: -400px;
         margin-bottom: 0px;
     }
 }
